fix: align arrow to right on mobile

--- a/components/Action/src/index.scss
+++ b/components/Action/src/index.scss
@@ -63,6 +63,7 @@
     display: flex;
     align-items: center;
     gap: var(--denhaag-action-actions-gap);
+    margin-inline-start: auto;
 
     & > a {
       width: 100%;
